// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxField should render component with disabled state 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c6 {
  pointer-events: none;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c1 {
  width: 16px;
}

fieldset[data-dimension='s'] .c1 {
  height: 16px;
}

.c5 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

.c5 *[fill^='#'] {
  fill: #FFFFFF;
}

.c3 {
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 4px;
  margin: 0;
  padding: 0;
}

.c3 ::-ms-check {
  display: none;
}

.c3:checked+.c4 {
  background-color: #0062FF;
  border: none;
}

.c3:disabled {
  pointer-events: none;
}

.c3:disabled+.c4 {
  border: 1px solid #B0B5BD;
  background-color: #E5E7EB;
}

.c3:not(:checked)+.c4 >* {
  display: none;
}

.c3:hover:not(:disabled)::after,
.c3:focus:not(:disabled)+.c3:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c3:checked:disabled+.c4 {
  background-color: #A7C7FF;
  border: none;
}

.c3:checked:disabled+.c4 *[fill^='#'] {
  fill: #FFFFFF;
}

.c3:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c2 {
  position: absolute;
  top: 2px;
  left: 2px;
}

.c0 {
  display: inline-block;
  position: relative;
  padding-top: 2px;
  padding-bottom: 2px;
  pointer-events: none;
  padding-left: 32px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #B0B5BD;
  cursor: default;
}

fieldset[data-dimension='s'] .c0 {
  padding-left: 28px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c0 {
  color: #B0B5BD;
  cursor: default;
}

<body>
    <div>
      <label
        class="c0"
        data-field-id="checkboxField"
        disabled=""
      >
        <div
          class="c1 c2"
        >
          <input
            class="c3"
            data-testid="element"
            disabled=""
            id="checkboxField"
            type="checkbox"
          />
          <div
            class="c4 c5"
          >
            <div
              aria-hidden="true"
              class="c6"
              focusable="false"
            />
          </div>
        </div>
        text
      </label>
    </div>
  </body>,
  "container": .c6 {
  pointer-events: none;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c1 {
  width: 16px;
}

fieldset[data-dimension='s'] .c1 {
  height: 16px;
}

.c5 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

.c5 *[fill^='#'] {
  fill: #FFFFFF;
}

.c3 {
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 4px;
  margin: 0;
  padding: 0;
}

.c3 ::-ms-check {
  display: none;
}

.c3:checked+.c4 {
  background-color: #0062FF;
  border: none;
}

.c3:disabled {
  pointer-events: none;
}

.c3:disabled+.c4 {
  border: 1px solid #B0B5BD;
  background-color: #E5E7EB;
}

.c3:not(:checked)+.c4 >* {
  display: none;
}

.c3:hover:not(:disabled)::after,
.c3:focus:not(:disabled)+.c3:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c3:checked:disabled+.c4 {
  background-color: #A7C7FF;
  border: none;
}

.c3:checked:disabled+.c4 *[fill^='#'] {
  fill: #FFFFFF;
}

.c3:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c2 {
  position: absolute;
  top: 2px;
  left: 2px;
}

.c0 {
  display: inline-block;
  position: relative;
  padding-top: 2px;
  padding-bottom: 2px;
  pointer-events: none;
  padding-left: 32px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #B0B5BD;
  cursor: default;
}

fieldset[data-dimension='s'] .c0 {
  padding-left: 28px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c0 {
  color: #B0B5BD;
  cursor: default;
}

<div>
    <label
      class="c0"
      data-field-id="checkboxField"
      disabled=""
    >
      <div
        class="c1 c2"
      >
        <input
          class="c3"
          data-testid="element"
          disabled=""
          id="checkboxField"
          type="checkbox"
        />
        <div
          class="c4 c5"
        >
          <div
            aria-hidden="true"
            class="c6"
            focusable="false"
          />
        </div>
      </div>
      text
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CheckboxField should render component with required properties 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c6 {
  pointer-events: none;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c1 {
  width: 16px;
}

fieldset[data-dimension='s'] .c1 {
  height: 16px;
}

.c5 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

.c5 *[fill^='#'] {
  fill: #FFFFFF;
}

.c3 {
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 4px;
  margin: 0;
  padding: 0;
}

.c3 ::-ms-check {
  display: none;
}

.c3:checked+.c4 {
  background-color: #0062FF;
  border: none;
}

.c3:disabled {
  pointer-events: none;
}

.c3:disabled+.c4 {
  border: 1px solid #B0B5BD;
  background-color: #E5E7EB;
}

.c3:not(:checked)+.c4 >* {
  display: none;
}

.c3:hover:not(:disabled)::after,
.c3:focus:not(:disabled)+.c3:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c3:checked:disabled+.c4 {
  background-color: #A7C7FF;
  border: none;
}

.c3:checked:disabled+.c4 *[fill^='#'] {
  fill: #FFFFFF;
}

.c3:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c2 {
  position: absolute;
  top: 2px;
  left: 2px;
}

.c0 {
  display: inline-block;
  position: relative;
  padding-top: 2px;
  padding-bottom: 2px;
  pointer-events: auto;
  padding-left: 32px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #23262D;
  cursor: pointer;
}

fieldset[data-dimension='s'] .c0 {
  padding-left: 28px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c0 {
  color: #B0B5BD;
  cursor: default;
}

<body>
    <div>
      <label
        class="c0"
        data-field-id="checkboxField"
      >
        <div
          class="c1 c2"
        >
          <input
            class="c3"
            data-testid="element"
            id="checkboxField"
            type="checkbox"
          />
          <div
            class="c4 c5"
          >
            <div
              aria-hidden="true"
              class="c6"
              focusable="false"
            />
          </div>
        </div>
        text
      </label>
    </div>
  </body>,
  "container": .c6 {
  pointer-events: none;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c1 {
  width: 16px;
}

fieldset[data-dimension='s'] .c1 {
  height: 16px;
}

.c5 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

.c5 *[fill^='#'] {
  fill: #FFFFFF;
}

.c3 {
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 4px;
  margin: 0;
  padding: 0;
}

.c3 ::-ms-check {
  display: none;
}

.c3:checked+.c4 {
  background-color: #0062FF;
  border: none;
}

.c3:disabled {
  pointer-events: none;
}

.c3:disabled+.c4 {
  border: 1px solid #B0B5BD;
  background-color: #E5E7EB;
}

.c3:not(:checked)+.c4 >* {
  display: none;
}

.c3:hover:not(:disabled)::after,
.c3:focus:not(:disabled)+.c3:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c3:checked:disabled+.c4 {
  background-color: #A7C7FF;
  border: none;
}

.c3:checked:disabled+.c4 *[fill^='#'] {
  fill: #FFFFFF;
}

.c3:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c2 {
  position: absolute;
  top: 2px;
  left: 2px;
}

.c0 {
  display: inline-block;
  position: relative;
  padding-top: 2px;
  padding-bottom: 2px;
  pointer-events: auto;
  padding-left: 32px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #23262D;
  cursor: pointer;
}

fieldset[data-dimension='s'] .c0 {
  padding-left: 28px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c0 {
  color: #B0B5BD;
  cursor: default;
}

<div>
    <label
      class="c0"
      data-field-id="checkboxField"
    >
      <div
        class="c1 c2"
      >
        <input
          class="c3"
          data-testid="element"
          id="checkboxField"
          type="checkbox"
        />
        <div
          class="c4 c5"
        >
          <div
            aria-hidden="true"
            class="c6"
            focusable="false"
          />
        </div>
      </div>
      text
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CheckboxField should render component with small dimension 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c6 {
  pointer-events: none;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 16px;
  height: 16px;
}

fieldset[data-dimension='s'] .c1 {
  width: 16px;
}

fieldset[data-dimension='s'] .c1 {
  height: 16px;
}

.c5 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

.c5 *[fill^='#'] {
  fill: #FFFFFF;
}

.c3 {
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 4px;
  margin: 0;
  padding: 0;
}

.c3 ::-ms-check {
  display: none;
}

.c3:checked+.c4 {
  background-color: #0062FF;
  border: none;
}

.c3:disabled {
  pointer-events: none;
}

.c3:disabled+.c4 {
  border: 1px solid #B0B5BD;
  background-color: #E5E7EB;
}

.c3:not(:checked)+.c4 >* {
  display: none;
}

.c3:hover:not(:disabled)::after,
.c3:focus:not(:disabled)+.c3:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c3:checked:disabled+.c4 {
  background-color: #A7C7FF;
  border: none;
}

.c3:checked:disabled+.c4 *[fill^='#'] {
  fill: #FFFFFF;
}

.c3:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c2 {
  position: absolute;
  top: 2px;
  left: 2px;
}

.c0 {
  display: inline-block;
  position: relative;
  padding-top: 2px;
  padding-bottom: 2px;
  pointer-events: auto;
  padding-left: 28px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #23262D;
  cursor: pointer;
}

fieldset[data-dimension='s'] .c0 {
  padding-left: 28px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c0 {
  color: #B0B5BD;
  cursor: default;
}

<body>
    <div>
      <label
        class="c0"
        data-field-id="checkboxField"
      >
        <div
          class="c1 c2"
        >
          <input
            class="c3"
            data-testid="element"
            id="checkboxField"
            type="checkbox"
          />
          <div
            class="c4 c5"
          >
            <div
              aria-hidden="true"
              class="c6"
              focusable="false"
            />
          </div>
        </div>
        text
      </label>
    </div>
  </body>,
  "container": .c6 {
  pointer-events: none;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  overflow: visible;
  width: 16px;
  height: 16px;
}

fieldset[data-dimension='s'] .c1 {
  width: 16px;
}

fieldset[data-dimension='s'] .c1 {
  height: 16px;
}

.c5 {
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 4px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: #FFFFFF;
  border: 1px solid #717681;
}

.c5 *[fill^='#'] {
  fill: #FFFFFF;
}

.c3 {
  appearance: none;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 4px;
  margin: 0;
  padding: 0;
}

.c3 ::-ms-check {
  display: none;
}

.c3:checked+.c4 {
  background-color: #0062FF;
  border: none;
}

.c3:disabled {
  pointer-events: none;
}

.c3:disabled+.c4 {
  border: 1px solid #B0B5BD;
  background-color: #E5E7EB;
}

.c3:not(:checked)+.c4 >* {
  display: none;
}

.c3:hover:not(:disabled)::after,
.c3:focus:not(:disabled)+.c3:not(:disabled)::after {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: calc(100% + 16px);
  height: calc(100% + 16px);
  background-color: #0000000D;
}

.c3:checked:disabled+.c4 {
  background-color: #A7C7FF;
  border: none;
}

.c3:checked:disabled+.c4 *[fill^='#'] {
  fill: #FFFFFF;
}

.c3:focus-visible {
  outline-offset: 2px;
  outline: #0062FF solid 2px;
}

.c2 {
  position: absolute;
  top: 2px;
  left: 2px;
}

.c0 {
  display: inline-block;
  position: relative;
  padding-top: 2px;
  padding-bottom: 2px;
  pointer-events: auto;
  padding-left: 28px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: #23262D;
  cursor: pointer;
}

fieldset[data-dimension='s'] .c0 {
  padding-left: 28px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c0 {
  color: #B0B5BD;
  cursor: default;
}

<div>
    <label
      class="c0"
      data-field-id="checkboxField"
    >
      <div
        class="c1 c2"
      >
        <input
          class="c3"
          data-testid="element"
          id="checkboxField"
          type="checkbox"
        />
        <div
          class="c4 c5"
        >
          <div
            aria-hidden="true"
            class="c6"
            focusable="false"
          />
        </div>
      </div>
      text
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
